# PyMentor

./: .env.example  PyMentor_Written_Report.docx  README.md  app.py  oral_exam_guide.md  pyproject.toml  requirements.txt  test_graph.py  test_guardrails.py  test_learning_assessment.py  test_llm.py  test_memory.py  test_rag.py  test_ui.py  tool_disclosure.md  written_report.md
data/knowledge/: 01_fundamentals.md  02_control_flow.md  03_collections.md  04_functions.md  05_errors_files_oop.md  06_misconceptions.md
deliverables/: PyMentor_Tool_Disclosure.docx  PyMentor_Written_Report.docx
evaluation/: learning_assessment.py  llm_judge.py  personas.json  ragas_faithfulness.py  run_evaluation.py  test_cases.json
evaluation/results/: latest.json  learning_assessment.json  llm_judge.json  ragas_faithfulness.json  retrieval_final.json
src/csai422_personalized_python_tutor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python_tutor/: __init__.py  config.py  graph.py  guardrails.py  knowledge.py  llm.py  memory.py  prompts.py  rag.py  schemas.py  service.py
