[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "csai422-personalized-python-tutor"
version = "1.0.0"
description = "A LangGraph personalized Python tutor with advanced RAG, memory, guardrails, and evaluation."
requires-python = ">=3.9"
dependencies = [
  "langgraph>=0.4,<2",
  "pydantic>=2.7,<3",
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
demo = ["streamlit>=1.35,<2"]
eval = [
  "ragas>=0.2,<1",
  "datasets>=3,<5",
  "langchain-ollama>=0.3,<1",
  "eval-type-backport; python_version < '3.10'",
]
test = ["pytest>=8,<9"]
docs = [
  "python-docx>=1.1,<2",
  "Pillow>=10,<13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
